@@ -14,6 +14,7 @@
 #include <qpdf/RC4.hh>
 #include <qpdf/MD5.hh>
 
+#include <algorithm>
 #include <assert.h>
 #include <string.h>
 
