@@ -1,3 +1,8 @@
+2013-11-29  Jay Berkenbilt  <ejb@ql.org>
+
+	* Add missing #include <algorithm> in some files that use std::min
+	and std::max.
+
 2013-11-21  Jay Berkenbilt  <ejb@ql.org>
 
 	* Change image comparison tests, which are disabled by default, to
